--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-sdk android:minSdkVersion="4" />
     <application android:label="@string/app_name"
                  android:debuggable="true">
-        <activity android:name=".HelloJni"
+        <activity android:name="PortScannerActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
