--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,10 +3,11 @@
       package="com.wly.net"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="4" />
+    <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="15" android:maxSdkVersion="17"/>
     <application android:label="@string/app_name"
-                 android:debuggable="true">
-        <activity android:name="PortScannerActivity"
+                 android:icon="@drawable/ic_launcher"
+                 android:allowBackup="true" android:allowClearUserData="true">
+        <activity android:name=".PortScannerActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
