--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,10 +3,15 @@
       package="com.wly.net"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="15" android:maxSdkVersion="17"/>
-    <application android:label="@string/app_name"
+    <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="17"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.SET_DEBUG_APP" />
+    <application 
+                 android:label="@string/app_name"
                  android:icon="@drawable/ic_launcher"
-                 android:allowBackup="true" android:allowClearUserData="true">
+                 android:allowBackup="true" 
+                 android:allowClearUserData="true">
         <activity android:name=".PortScannerActivity"
                   android:label="@string/app_name">
             <intent-filter>
