--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,12 +8,19 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.SET_DEBUG_APP" />
     <application 
-                 android:label="@string/app_name"
+                 android:label="@string/app1_name"
                  android:icon="@drawable/ic_launcher"
                  android:allowBackup="true" 
                  android:allowClearUserData="true">
         <activity android:name=".PortScannerActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app1_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+                <activity android:name=".PacketInfoActivity"
+                          android:label="@string/app2_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
